clusters/labinfra/core/ci-cd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
  labels:
    app.kubernetes.io/name: cicd-gitops-demo
    app.kubernetes.io/part-of: cicd
    app.kubernetes.io/managed-by: flux
