clusters/labinfra/core/ci-cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-gitops-demo
  namespace: cicd
  labels:
    app.kubernetes.io/name: cicd-gitops-demo
    app.kubernetes.io/part-of: cicd
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: cicd-gitops-demo
