clusters/labinfra/core/ci-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-gitops-demo
  namespace: cicd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "cicd.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-set-headers: "ingress-nginx/proxy-headers"
  labels:
    app.kubernetes.io/name: cicd-gitops-demo
    app.kubernetes.io/part-of: cicd
spec:
  ingressClassName: nginx
  rules:
  - host: cicd.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cicd-gitops-demo
            port:
              name: http
